# mattermost_bru

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  pyproject.toml
src/: main.py
src/configs/: __init__.py
